Agregue la fotito del itba. Cambios menores en la caratula.

--- a/eac2.tex
+++ b/eac2.tex
@@ -56,12 +56,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{titlepage}
 	\vfill
+	\thispagestyle{empty}
 	\begin{center}
+		\includegraphics{./images/itba.jpg}
+		\vfill
 		\Huge{EAC 2}\\
 		\vspace{1cm}
 		\Huge{Probabilidad y Estad\'istica}\\
 	\end{center}
-	\vspace{2cm}
+	\vfill
 	\large{
         \begin{tabular}{lcr}
 		De Elias, Miguek && 50457 \\
